--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/CSS/index.css">
 </head>
 
 <body>
-    <div class="img">
-        <p>
+    <div class="img"></div>
 
-        </p>
+    <h2 class="subtitle">Rover de marte</h2>
 
-        <img alt="imagen" id="mi-imagen" style="max-width: 100%">
+    <div class="contenedor">
+        <div class="photos-rover" id="photos-rover"></div>
+
     </div>
-
-    <h2>Asteroides cerca de la tierra</h2>
-
-    <div id="epic"></div>
 
     <script src="./js/index.js"></script>
 
