--- a/index.html
+++ b/index.html
@@ -5,21 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Api's Nasa</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!--Custom CSS-->
     <link rel="stylesheet" href="./assets/CSS/index.css">
 </head>
 
 <body>
-    <div class="img"></div>
+    <div class="container">
+        <!-- <div class="jumbotron">
+            <div class="row text-center">
+                <img src="" alt="" id="api-imgday" class="img-fluid" style="max-height: 600px;">
+            </div>
 
-    <h2 class="subtitle">Rover de marte</h2>
+        </div> -->
+        <div class="jumbotron">
+            <div class="row text-center">
+                <div class="col-lg-9 d-flex">
+                    <img src="" alt="" id="api-imgday" class="img-fluid  align-self-center" style="max-height: 500px;width:100%;">
 
-    <div class="contenedor">
-        <div class="photos-rover" id="photos-rover"></div>
-
+                </div>
+                <div class="col-lg-3 d-flex p-3">
+                    <p class="" id="info-imgday"></p>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <h2 class="subtitle">Rover de marte</h2>
+
+            <div class="photos-rover" id="photos-rover"></div>
+        </div>
+
+
+    </div>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+
     <script src="./js/index.js"></script>
+
 
 </body>
 
