--- a/index.html
+++ b/index.html
@@ -14,34 +14,29 @@
 
 <body>
     <div class="container">
-        <!-- <div class="jumbotron">
-            <div class="row text-center">
-                <img src="" alt="" id="api-imgday" class="img-fluid" style="max-height: 600px;">
+        <!--JUMBOTRON-->
+        <div class="row jumbotron justify-content-center  align-items-center">
+            <div class="col-lg-12 text-center p-2">
+                <p id="title-foto" class="text-center bg-dark mx-3"></p>
+
+                <img src="" alt="" id="api-imgday" class="img-fluid">
             </div>
-
-        </div> -->
-        <div class="jumbotron">
-            <div class="row text-center">
-                <div class="col-lg-9 d-flex">
-                    <img src="" alt="" id="api-imgday" class="img-fluid  align-self-center" style="max-height: 500px;width:100%;">
-
-                </div>
-                <div class="col-lg-3 d-flex p-3">
-                    <p class="" id="info-imgday"></p>
-                </div>
+        </div>
+        <div class="row justify-content-center  align-items-center">
+            <div class="col-lg-12 p-2">
+                <p class="mx-3" id="info-imgday"></p>
             </div>
         </div>
     </div>
-
-    <div class="container">
+    <!--
+<div class="container w-50 h-50">
         <div class="row">
             <h2 class="subtitle">Rover de marte</h2>
-
             <div class="photos-rover" id="photos-rover"></div>
         </div>
-
-
     </div>
+-->
+
     <!-- Option 2: Separate Popper and Bootstrap JS -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
