Seguir la api de epic para ver que mas datos puede dar.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container ">
         <!--JUMBOTRON-->
-        <div class="row jumbotron justify-content-center  align-items-center">
+        <div class="row jumbotron mx-0 justify-content-center  align-items-center">
             <div class="col-lg-12 text-center p-2">
                 <p id="title-foto" class="text-center bg-dark mx-3"></p>
 
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="row justify-content-center  align-items-center">
-            <div class="col-lg-12 p-2">
+            <div class="col-lg-12 text-center p-2">
                 <p class="mx-3" id="info-imgday"></p>
             </div>
         </div>
@@ -36,6 +36,17 @@
         </div>
     </div>
 -->
+
+    <!--Api de Epic-->
+    <div class="container">
+        <div class="epic">
+            <div class="row">
+                <div class="col">
+                    <img src="" alt="" id="img-epic" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
 
