--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container ">
         <!-- JUMBOTRON -->
-        <div class="jumbotron bg-dark text-white px-3 px-lg-5">
+        <div class="jumbotron bg-dark text-white px-3 px-lg-5 mb-3">
             <div class="row mx-0 ">
                 <div class="col-lg-7 text-center align-self-center ">
 
@@ -50,8 +50,8 @@
     <div class="container">
         <div class="epic">
             <div class="row">
-                <div class="col">
-                    <img src="" alt="" id="img-epic" class="img-fluid">
+                <div class="col epic-imagenes">
+                    <!-- <img src="" alt="" id="img-epic" class="img-fluid"> -->
                 </div>
             </div>
         </div>
