--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="row mx-0 ">
                 <div class="col-lg-8 text-center align-self-center ">
 
-                    <div class="card bg-dark ">
+                    <div class="card bg-dark " id="card_img-day">
                         <p id="title-foto"></p>
-                        <img src="..." class="" alt="..." id="api-imgday">
+
                         <h5 class="card-title">Imagen del dia</h5>
                         <button type="button" class=" btn btn-primary btn-modal_day-img mx-auto" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" ">Ver imagen</button>
