Cuando imgDay es un video
Se revisa cuando en la api aparece un video, no pude hacerlo con
templates pero de la forma basica si funcionó continuar con lo del
commit anterior.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
                         </div>
                     </div>
                 </div>
-                
+                <template id="templateVideo">
+                    <div class="modal-dialog modal-xl">
+                        <iframe width="480" height="270" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </template>
             </div>
             <div class="row">
                 <div class="col-lg-12">
