Se usa templates
Se usa template para cuando sea video, crear el de imagen y continuar
con el carousel responsive.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
 </head>
 
 <body>
-    
+    <div class="jumbotron mx-auto">
+        <div class="container text-center">
+            
+        </div>
+    </div>
+    <!--Template para cuando se video-->
+    <template class="template-iframe">
+        <div class="ratio ratio-21x9">
+            <iframe src="" frameborder="0"></iframe>
+        </div>
+    </template>
+    <!--Template para cuando se imagen-->
 </body>
 
-
+<script src="./js/index.js"></script>
 </html>
