--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
 <body>
     <div class="jumbotron mx-auto">
-        <div class="container text-center">
+        <div class="container ">
+            <div class="row">
+                <div class="col-lg-12">
+
+                </div>
+            </div>
             
         </div>
     </div>
@@ -26,6 +31,18 @@
         </div>
     </template>
     <!--Template para cuando se imagen-->
+    <template id="template_main-img">
+        <div class="card text-center">
+            <div class="card-title "></div>
+            <img src="" class="img-fluid" alt="imagen-principal">
+            <div class="card-body">
+              <p class="card-text"></p>
+            </div>
+          </div>
+    </template>
+     <!-- Option 1: Bootstrap Bundle with Popper -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 
 <script src="./js/index.js"></script>
