Uso de jquery y fetch mas ordenado
Se esta intentando crear carousel y vista normal dependiendo del tamaño
de la ventana.
Se inserto jquery y reescribio fetch.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         crossorigin="anonymous"></script>
 
 </body>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
 <script src="./js/index.js"></script>
 
 </html>
