--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
     <!--Imagenes de api epic-->
     <div class="epic-imagenes">
         <div class="container">
-
+            
         </div>
     </div>
+
+    <template id="galeria_img" class="galeria_img">
+        <img src="" alt="" class="img-thumbnail">
+    </template>
 
     <template class="carousel" id="carousel">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
