--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!--Bootstrap-->
     <link rel="stylesheet" href="/assets/CSS/bootstrap/bootstrap.min.css">
@@ -54,11 +54,11 @@
     </nav>
 
     <main>
-        <div class="jumbotron m-2 bg-light d-flex justify-content-center align-items-center">
+        <div class="jumbotron m-2 d-flex justify-content-center align-items-center">
             <div class="container">
                 <div class="row ">
                     <div class="col-lg-12 d-flex justify-content-center align-items-center">
-                        <div class="card jumbotron_card text-center d-flex align-items-center">
+                        <div class="card jumbotron_card text-center d-flex align-items-center bg-light">
 
                         </div>
                     </div>
@@ -67,12 +67,11 @@
         </div>
 
         <template id="template_jumbotron-card">
-                <img class="card-img-top p-4" alt="..." id="jumbotron_img">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
+            <img class="card-img-top p-4 p-lg-3" alt="..." id="jumbotron_img">
+            <div class="card-body p-3 p-lg-2 m-3 m-lg-2">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+            </div>
         </template>
     </main>
 
