--- a/index2.html
+++ b/index2.html
@@ -65,13 +65,38 @@
                 </div>
             </div>
         </div>
+        <div class="galeria">
+            <div class="container">
+                <div class="row" id="galeria_fotos">
+
+                </div>
+            </div>
+        </div>
 
         <template id="template_jumbotron-card">
             <img class="card-img-top p-4 p-lg-3" alt="..." id="jumbotron_img">
-            <div class="card-body p-3 p-lg-2 m-3 m-lg-2">
+            <div class="card-body p-3 p-lg-2 m-3">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text"></p>
             </div>
+        </template>
+
+
+
+        <template id="template_galeria-carousel">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </template>
     </main>
 
