--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Api Nasa</title>
     <!--Bootstrap-->
     <link rel="stylesheet" href="/assets/CSS/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/CSS/index2.css">
@@ -57,7 +57,7 @@
         <div class="jumbotron m-2 d-flex justify-content-center align-items-center">
             <div class="container">
                 <div class="row ">
-                    <div class="col-lg-12 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-12 d-flex justify-content-center align-items-center" id="jumbotron_dinamyc-content">
                         <div class="card jumbotron_card text-center d-flex align-items-center bg-light">
 
                         </div>
@@ -65,6 +65,14 @@
                 </div>
             </div>
         </div>
+
+        <template id="template_jumbotron-video">
+            <div class="ratio " style="--bs-aspect-ratio: 30%;">
+                <iframe src="" title=""
+                    allowfullscreen></iframe>
+            </div>
+        </template>
+
         <div class="galeria">
             <div class="container">
                 <div class="row" id="galeria_fotos">
@@ -81,22 +89,22 @@
             </div>
         </template>
 
-
-
         <template id="template_galeria-carousel">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  
+
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+            </div>
         </template>
     </main>
 
