--- a/index2.html
+++ b/index2.html
@@ -39,11 +39,12 @@
     </nav>
 
     <main>
+        <!--JUMBOTRON-->
         <div class="jumbotron m-2 d-flex justify-content-center align-items-center">
             <div class="container">
                 <div class="row ">
                     <div class="col-lg-12 d-flex justify-content-center align-items-center" id="jumbotron_dinamyc-content">
-                        <div class="card jumbotron_card text-center d-flex align-items-center bg-light">
+                        <div class="card jumbotron_card text-center d-flex align-items-center bg-dark text-white">
 
                         </div>
                     </div>
@@ -65,7 +66,9 @@
                 <p class="card-text"></p>
             </div>
         </template>
+        <br>
 
+        <!--API EPIC imagenes de la tierra-->
         <div class="galeria">
             <div class="container">
                 <div class="row" id="galeria_fotos">
@@ -91,6 +94,8 @@
                 </button>
             </div>
         </template>
+
+
     </main>
 
     <script src="/assets/JS/bootstrap/bootstrap.bundle.min.js"></script>
