--- a/index2.html
+++ b/index2.html
@@ -61,8 +61,8 @@
 
         <template id="template_jumbotron-card">
             <img class="card-img-top p-4 p-lg-3" alt="..." id="jumbotron_img">
-            <div class="card-body p-3 p-lg-2 m-3">
-                <h5 class="card-title">Card title</h5>
+            <div class="card-body p-3 p-lg-2 m-1 m-lg-3">
+                <h5 class="card-title" style="min-height: 1.2em;"></h5>
                 <p class="card-text"></p>
             </div>
         </template>
